# LidarRoadBoundaryDetection

./: .gitignore  CMakeLists.txt
config/: boundary_detection.config
lib/: ground_segment.cpp
proto/: road_boundary.pb.cc  road_boundary.pb.h
